# nn-course

./: README.md  pyproject.toml  практ1_dataset.ipynb
notebooks/: CNN_pract3.ipynb  lab1.ipynb  prediction_time_series_using_RNN.ipynb
notebooks/.ipynb_checkpoints/: lab1-checkpoint.ipynb
notebooks/lab2/: mlp.ipynb  neuron.ipynb
