[project]
name = "nn-course"
version = "0.0.1"
description = "Labs from nn course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
